--- a/.classpath
+++ b/.classpath
@@ -8,21 +8,38 @@
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 8 [1.8.0_131]">
-		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/Users/fer/Downloads/gson-2.8.1.jar"/>
-	<classpathentry kind="lib" path="/Users/fer/Downloads/httpcomponents-client-4.5.3/lib/commons-codec-1.9.jar"/>
-	<classpathentry kind="lib" path="/Users/fer/Downloads/httpcomponents-client-4.5.3/lib/commons-logging-1.2.jar"/>
-	<classpathentry kind="lib" path="/Users/fer/Downloads/httpcomponents-client-4.5.3/lib/fluent-hc-4.5.3.jar"/>
-	<classpathentry kind="lib" path="/Users/fer/Downloads/httpcomponents-client-4.5.3/lib/httpclient-4.5.3.jar"/>
-	<classpathentry kind="lib" path="/Users/fer/Downloads/httpcomponents-client-4.5.3/lib/httpclient-cache-4.5.3.jar"/>
-	<classpathentry kind="lib" path="/Users/fer/Downloads/httpcomponents-client-4.5.3/lib/httpclient-win-4.5.3.jar"/>
-	<classpathentry kind="lib" path="/Users/fer/Downloads/httpcomponents-client-4.5.3/lib/httpcore-4.4.6.jar"/>
-	<classpathentry kind="lib" path="/Users/fer/Downloads/httpcomponents-client-4.5.3/lib/httpmime-4.5.3.jar"/>
-	<classpathentry kind="lib" path="/Users/fer/Downloads/httpcomponents-client-4.5.3/lib/jna-4.1.0.jar"/>
-	<classpathentry kind="lib" path="/Users/fer/Downloads/httpcomponents-client-4.5.3/lib/jna-platform-4.1.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="lib/asm-5.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-beanutils-1.9.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-codec-1.9.jar"/>
+	<classpathentry kind="lib" path="lib/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-digester-2.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-fileupload-1.3.3.jar"/>
+	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang-2.4.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang3-3.6.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-api-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/fluent-hc-4.5.3.jar"/>
+	<classpathentry kind="lib" path="lib/freemarker-2.3.23.jar"/>
+	<classpathentry kind="lib" path="lib/gson-2.8.1.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient-4.5.3.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient-cache-4.5.3.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient-win-4.5.3.jar"/>
+	<classpathentry kind="lib" path="lib/httpcore-4.4.6.jar"/>
+	<classpathentry kind="lib" path="lib/httpmime-4.5.3.jar"/>
+	<classpathentry kind="lib" path="lib/javassist-3.20.0-GA.jar"/>
+	<classpathentry kind="lib" path="lib/jna-4.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/jna-platform-4.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-api-2.8.2.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-core-2.8.2.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.39-bin.jar"/>
+	<classpathentry kind="lib" path="lib/ognl-3.1.12.jar"/>
+	<classpathentry kind="lib" path="lib/struts2-convention-plugin-2.5.12.jar"/>
+	<classpathentry kind="lib" path="lib/struts2-core-2.5.12.jar"/>
+	<classpathentry kind="lib" path="lib/taglibs-standard-jstlel-1.2.5.jar"/>
+	<classpathentry kind="lib" path="lib/xwork-core-2.3.33.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
