--- a/.classpath
+++ b/.classpath
@@ -33,14 +33,14 @@
 	<classpathentry kind="lib" path="lib/ognl-3.1.12.jar"/>
 	<classpathentry kind="lib" path="lib/struts2-convention-plugin-2.5.12.jar"/>
 	<classpathentry kind="lib" path="lib/struts2-core-2.5.12.jar"/>
-	<classpathentry kind="lib" path="lib/taglibs-standard-jstlel-1.2.5.jar"/>
+	<classpathentry kind="lib" path="/Users/fer/Downloads/jstl-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/xwork-core-2.3.33.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0">
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.5">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_131">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 8 [1.8.0_131]">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
