Created a UserProfileAction class that will be tied to the user profile page after login

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -16,7 +16,8 @@
 	<filter-name>struts2</filter-name>
 	<url-pattern>*.action</url-pattern>
 	<url-pattern>/login.jsp</url-pattern>
-	<url-pattern>/login</url-pattern>	
+	<url-pattern>/login</url-pattern>
+	<url-pattern>/userprofile.jsp</url-pattern>	
 </filter-mapping>
   
  <welcome-file-list>
