Added functionality in LoginAction to create a watchlist object when logging on on success that will be used to display the results on user profile page

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 build/classes/struts.xml
 build/classes/.gitignore
 *.properties
+bullnotesCreation.sql
+build/classes/controllers/LoginAction.class
+build/classes/controllers/StaticSymbolsAction.class
