--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -17,6 +17,7 @@
 	<url-pattern>*.action</url-pattern>
 	<url-pattern>/login.jsp</url-pattern>
 	<url-pattern>/login</url-pattern>
+	<url-pattern>/loadWatchList</url-pattern>
 	<url-pattern>/userprofile.jsp</url-pattern>	
 </filter-mapping>
   
