--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -20,6 +20,8 @@
 	<url-pattern>/loadWatchList</url-pattern>
 	<url-pattern>/userprofile.jsp</url-pattern>	
 	<url-pattern>/searchSymbol</url-pattern>
+	<url-pattern>/createaccount.jsp</url-pattern>	
+	<url-pattern>/createAccount</url-pattern>	
 </filter-mapping>
   
  <welcome-file-list>
