--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -22,6 +22,7 @@
 	<url-pattern>/searchSymbol</url-pattern>
 	<url-pattern>/createaccount.jsp</url-pattern>	
 	<url-pattern>/createAccount</url-pattern>	
+	<url-pattern>/searchSymbolUP</url-pattern>
 </filter-mapping>
   
  <welcome-file-list>
