added action to add a quote to a watchlist. Method in UserProfileAction addSymbolToWatchList and private variable addSymbol with getter and setter

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -23,6 +23,7 @@
 	<url-pattern>/createaccount.jsp</url-pattern>	
 	<url-pattern>/createAccount</url-pattern>	
 	<url-pattern>/searchSymbolUP</url-pattern>
+	<url-pattern>/addSymbolToWatchList</url-pattern>
 </filter-mapping>
   
  <welcome-file-list>
