added actions for adding and removing a watchlist

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -24,6 +24,8 @@
 	<url-pattern>/createAccount</url-pattern>	
 	<url-pattern>/searchSymbolUP</url-pattern>
 	<url-pattern>/addSymbolToWatchList</url-pattern>
+	<url-pattern>/removeWatchList</url-pattern>
+	<url-pattern>/addWatchList</url-pattern>
 </filter-mapping>
   
  <welcome-file-list>
