--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -14,6 +14,7 @@
 
 <filter-mapping>
 	<filter-name>struts2</filter-name>
+	<url-pattern>/*</url-pattern>
 	<url-pattern>*.action</url-pattern>
 	<url-pattern>/login.jsp</url-pattern>
 	<url-pattern>/login</url-pattern>
