added git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-build/classes/struts.xml
+build/classes/*
 build/classes/.gitignore
 *.properties
 bullnotesCreation.sql
-build/classes/controllers/LoginAction.class
-build/classes/controllers/StaticSymbolsAction.class
